--- a/style.css
+++ b/style.css
@@ -103,3 +103,19 @@ body{
   footer ul {
     list-style: none;
   }
+
+  .main {
+    justify-content: center;
+  }
+
+  .main a {
+    padding: 0 0
+  }
+
+  .main img {
+    padding-top: 0.53em;
+    padding-bottom: 05em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
